--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -28,4 +28,4 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Navigation', name: 'menu', widget: 'string' }
+      - { label: 'Navigation', name: 'menu', widget: 'list' }
