--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   branch: master
 
 publish_mode: editorial_workflow
-site_url: https://xenodochial-hamilton-db3de6.netlify.app/
+site_url: https://poc-la-musa.netlify.app/
 
 media_folder: static/img
 public_folder: /img
