--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@nuxtjs/pwa": "^3.3.5",
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
